fix: update argument line for maven-surefire-plugin and add missing newline in reachability-metadata.json